--- a/assets/main.css
+++ b/assets/main.css
@@ -1,7 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Comfortaa|Cutive|Lobster|Rubik|Scope+One|Shrikhand|Work+Sans');
 body{
-    background: url("http://kingofwallpapers.com/background-images-for-websites/background-images-for-websites-016.jpg");
-    background-size: cover;
+    background: url("http://kingofwallpapers.com/background-images-for-websites/background-images-for-websites-016.jpg") no-repeat;
+    background-size: contain;
+    background-size:100% 100%;
+    padding: 2em;
+    padding-bottom: 12em;
 }
 
 /*
@@ -42,6 +45,18 @@ font-family: 'Scope One', serif;
     padding-bottom: 2em;
     background: rgba(87,100,117,0.8);
     color: #fff;
+}
+.status-message{
+    font-family: 'Work Sans', serif;
+    border-radius: 8px;
+    font-size: 18px;
+    margin-top: 1em;
+    padding: 2em;
+    padding-top: 2em;
+    padding-bottom: 2em;
+    background: #fff;
+    color: #000;
+    text-align: center;
 }
 .feedback h2{
     font-family: 'Comfortaa', cursive;
